# BilingualAlign

./: .dockerignore  .gitignore  Dockerfile  README.md  book_aligner.py  pyproject.toml  requirements.txt
prompts/: detailed_evaluation.txt  quick_evaluation.txt
sample_books/: chinese_sample.md  english_sample.md
scripts/: preprocess_english.py
src/: align.py  evaluate.py
