[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bilingual-align"
version = "0.1.0"
description = "Aligns English and Chinese sentences from books in Markdown format using sentence embeddings"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "BilingualAlign Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "markdown-it-py",
    "spacy>=3.7.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "litellm>=1.0.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "zh-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/zh_core_web_sm-3.8.0/zh_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.scripts]
bilingual-align = "src.align:main"
bilingual-evaluate = "src.evaluate:main"

[project.urls]
Homepage = "https://github.com/yourusername/BilingualAlign"
Repository = "https://github.com/yourusername/BilingualAlign"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black" 